--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,7 +14,7 @@ types-setuptools
 
 # testing
 pytest
-tensorizer==2.9.0
+# tensorizer==2.9.0
 pytest-forked
 pytest-asyncio
 pytest-rerunfailures
@@ -23,8 +23,8 @@ httpx
 einops # required for MPT
 requests
 ray
-peft
-awscli
+# peft
+# awscli
 
 # Benchmarking
 aiohttp
