--- a/.buildkite/pipeline-vllm-ci.yml
+++ b/.buildkite/pipeline-vllm-ci.yml
@@ -1,15 +1,15 @@
 steps:
-  # - label: ":running: unit test"
-  #   timeout: 3600
-  #   env:
-  #     COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_unit_test.sh"
-  #     COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
-  #   commands:
-  #     - bash .buildkite/job_submit_buildkite.sh
-  #   retry:
-  #     automatic:
-  #       - exit_status: -1 # Agent lost/spot preemption
-  #         limit: 2
+  - label: ":running: oss unit test"
+    timeout: 3600
+    env:
+      COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_unit_test.sh"
+      COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
+    commands:
+      - bash .buildkite/job_submit_buildkite.sh
+    retry:
+      automatic:
+        - exit_status: -1 # Agent lost/spot preemption
+          limit: 2
 
   # - label: ":running: spec decode tp1 tests"
   #   timeout: 7200
@@ -77,7 +77,8 @@ steps:
     env:
       COMMAND: "bash .buildkite/ci/build_wheel.sh"
       COMPUTE_CONFIG: ".buildkite/ci/compute-config-m5-8xlarge.yaml"
-      IMAGE: anyscale/ray:2.8.0-py39-cu121
+      # Uses ubunt 22.04.
+      IMAGE: anyscale/ray:2.12.0-slim-py39-cu121
     commands:
       - bash .buildkite/job_submit_buildkite.sh
     retry:
