--- a/.buildkite/ci/compute-config-g5-2xlarge.yaml
+++ b/.buildkite/ci/compute-config-g5-2xlarge.yaml
@@ -10,7 +10,7 @@ head_node_type:
     object_store_memory:
     custom_resources:
       head_node: 1
-      accelerator_type_a10: 1
+      # accelerator_type_a10: 1
   aws_advanced_configurations_json:
     TagSpecifications:
       - ResourceType: instance
