--- a/.buildkite/pipeline-vllm-ci.yml
+++ b/.buildkite/pipeline-vllm-ci.yml
@@ -1,9 +1,21 @@
 steps:
   - label: ":running: oss unit test"
-    timeout: 3600
+    timeout: 7200
     env:
       # Need VLLM_INSTALL_PUNICA_KERNELS=1 to build punica kernel which is used for lora tests.
-      COMMAND: "VLLM_INSTALL_PUNICA_KERNELS=1 bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_unit_test.sh"
+      COMMAND: "python3 .buildkite/ci/hf_login.py && VLLM_INSTALL_PUNICA_KERNELS=1 bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_unit_test.sh"
+      COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-16xlarge.yaml"
+    commands:
+      - bash .buildkite/job_submit_buildkite.sh
+    retry:
+      automatic:
+        - exit_status: -1 # Agent lost/spot preemption
+          limit: 2
+
+  - label: ":running: proprietary unit test"
+    timeout: 3600
+    env:
+      COMMAND: "python3 .buildkite/ci/hf_login.py && bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_anyscale_unit_test.sh"
       COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
     commands:
       - bash .buildkite/job_submit_buildkite.sh
@@ -12,46 +24,10 @@ steps:
         - exit_status: -1 # Agent lost/spot preemption
           limit: 2
 
-  # - label: ":running: spec decode tp1 tests"
-  #   timeout: 7200
-  #   env:
-  #     COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_spec_decode_tp1_test.sh"
-  #     COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
-  #   commands:
-  #     - bash .buildkite/job_submit_buildkite.sh
-  #   retry:
-  #     automatic:
-  #       - exit_status: -1 # Agent lost/spot preemption
-  #         limit: 2
-
-  # - label: ":running: kernel tests"
-  #   timeout: 7200
-  #   env:
-  #     COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_kernel_tests.sh"
-  #     COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
-  #   commands:
-  #     - bash .buildkite/job_submit_buildkite.sh
-  #   retry:
-  #     automatic:
-  #       - exit_status: -1 # Agent lost/spot preemption
-  #         limit: 2
-
-  # - label: ":running: s3 test"
-  #   timeout: 1800
-  #   env:
-  #     COMMAND: "BUILD_BAZEL=1 bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_s3_test.sh"
-  #     COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
-  #   commands:
-  #     - bash .buildkite/job_submit_buildkite.sh
-  #   retry:
-  #     automatic:
-  #       - exit_status: -1 # Agent lost/spot preemption
-  #         limit: 2
-
   - label: ":running: distributed test"
     timeout: 3600
     env:
-      COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_distributed_test.sh"
+      COMMAND: "python3 .buildkite/ci/hf_login.py && bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_distributed_test.sh"
       COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-12xlarge.yaml"
     commands:
       - bash .buildkite/job_submit_buildkite.sh
@@ -59,18 +35,6 @@ steps:
       automatic:
         - exit_status: -1 # Agent lost/spot preemption
           limit: 2
-
-  # - label: ":running: correctness test"
-  #   timeout: 3600
-  #   env:
-  #     COMMAND: "bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_correctness_test.sh"
-  #     COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
-  #   commands:
-  #     - bash .buildkite/job_submit_buildkite.sh
-  #   retry:
-  #     automatic:
-  #       - exit_status: -1 # Agent lost/spot preemption
-  #         limit: 2
 
   - label: ":python: build wheel"
     timeout: 1800
