--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -6,11 +6,11 @@ on:
   push:
     branches:
       - main
-      - oss-main
+      - new-main
   pull_request:
     branches:
       - main
-      - oss-main
+      - new-main
 
 jobs:
   ruff:
