[New Fork][3/N] Support json mode V2 (#527)
This PR supports json mode V2

---------

Signed-off-by: sang <rkooo567@gmail.com>
Signed-off-by: Kourosh Hakhamaneshi <kourosh@anyscale.com>
Co-authored-by: Kourosh Hakhamaneshi <kourosh@anyscale.com>

--- a/.buildkite/pipeline-vllm-ci.yml
+++ b/.buildkite/pipeline-vllm-ci.yml
@@ -13,7 +13,7 @@ steps:
           limit: 2
 
   - label: ":running: proprietary unit test"
-    timeout: 3600
+    timeout: 7200
     env:
       COMMAND: "python3 .buildkite/ci/hf_login.py && bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_anyscale_unit_test.sh"
       COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-2xlarge.yaml"
@@ -24,10 +24,22 @@ steps:
         - exit_status: -1 # Agent lost/spot preemption
           limit: 2
 
-  - label: ":running: distributed test"
+  - label: ":running: oss distributed test"
     timeout: 3600
     env:
       COMMAND: "python3 .buildkite/ci/hf_login.py && bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_distributed_test.sh"
+      COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-12xlarge.yaml"
+    commands:
+      - bash .buildkite/job_submit_buildkite.sh
+    retry:
+      automatic:
+        - exit_status: -1 # Agent lost/spot preemption
+          limit: 2
+
+  - label: ":running: anyscale distributed test"
+    timeout: 3600
+    env:
+      COMMAND: "python3 .buildkite/ci/hf_login.py && bash .buildkite/ci/build_editable.sh && bash .buildkite/ci/run_anyscale_distributed_test.sh"
       COMPUTE_CONFIG: ".buildkite/ci/compute-config-g5-12xlarge.yaml"
     commands:
       - bash .buildkite/job_submit_buildkite.sh
