[ci] Add 1xA10 and 4xA10 CI queues and run Scratch tests on A10 (#550)
Signed-off-by: kevin <kevin@anyscale.com>

--- a/.buildkite/anyscale-test-pipeline.yaml
+++ b/.buildkite/anyscale-test-pipeline.yaml
@@ -6,6 +6,7 @@ steps:
 
   - label: Anyscale ScratchLLM + vLLM integration unit test
     working_dir: "/vllm-workspace"
+    gpu: a10
     commands:
     - bash .buildkite/ci/run_scratch_unit_test.sh
 
