--- a/.github/workflows/reminder_comment.yml
+++ b/.github/workflows/reminder_comment.yml
@@ -1,7 +1,7 @@
 name: PR Reminder Comment Bot
 on:
   pull_request_target:
-    types: [opened]
+    types: [closed] # Leave it as 'closed' when merging from upstream
 
 jobs:
   pr_reminder:
